[project]
name = "pylibtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ks25026", email = "shimizu.k.ak@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
